Fix 'User profile image is cropped' - https://moodle.org/mod/forum/discuss.php?d=417776.

--- a/style/user.css
+++ b/style/user.css
@@ -54,7 +54,7 @@
     left: 0;
     position: absolute;
     right: 0;
-    top: -80px;
+    top: -60px;
 }
 
 #adaptable_profile_tree .ucol1 .adaptableuserpicture a img.userpicture {
